<resources>
    <string name="app_name">Homework-17-Login&amp;RegisterAppUpdated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="register_now">Register Now</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="log_out">Log Out</string>
</resources>